--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "require-dev": {
     },
     "autoload": {
-        "files": ["autoload.php"]
+        "files": ["index.php"]
     },
     "autoload-dev": {
         "psr-0": {
